AG-7 fixed alignment of form on page

--- a/code-ff/project2/src/components/Form/Form.css
+++ b/code-ff/project2/src/components/Form/Form.css
@@ -5,3 +5,10 @@
     height: 100vh;
     width: 100vw; */
 }
+
+.form-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
